--- a/spmp.org
+++ b/spmp.org
@@ -45,8 +45,12 @@ turns, to keep games short and snappy. For each turn there are two parts, one wh
 and one where players can't do anything, but the computer would simulate a large number of turns for the player.
 Because of the nature of Conway's game of life, players could score own goals.
 
+** Anouncement!
+The website is online at Heroku, still waiting on the custom domain\dots Google says that SSL should be up within
+the next 24 hours. So, you can find the game at [[https://automata-football.herokuapp.com/][Herokuapp]] or at [[https://www.playautomatafootball.page][playautomatafootball.page]] when the SSL becomes
+certified.
 ** Project deliverables --- Work Breakdown Structure
-*** TODO General Project Organization by April 27
+*** DONE General Project Organization by April 27
     - [X] Update SPMP
       - [X] Timeline
       - [X] Explain what happened in the evolution of the project
@@ -54,26 +58,33 @@ Because of the nature of Conway's game of life, players could score own goals.
     - [X] Update Use Cases
       - [X] Add Authenticated/Unauthenticated user
       - [X] Add Extra Admin Criterion
-    - [ ] GANNT Chart
-    - [ ] System Test Procedure
-    - [ ] Milestone Review
-*** TODO Working Website by May 3
+    - [X] GANNT Chart
+    - [X] System Test Procedure
+    - [X] Milestone Review
+*** DONE Working Website by May 3
     - [X] Get underlying algorithm for Conway's game of Life up and running
-    - [ ] Make front-end
-      - [ ] Name entry/Introduction
-      - [ ] Game queue
-      - [ ] Game
-      - [ ] Practice Mode
-    - [-] Make backend
+    - [X] Make front-end
+      - [X] Name entry/Introduction
+      - [X] Game queue
+      - [X] Game
+	- [X] Functionality of Conways Game of Life
+	- [X] Rounds
+	- [X] Sending turns
+	- [X] Receiving turns
+      - [X] Practice Mode
+    - [X] Make backend
       - [X] Name System
       - [X] Matchmaking
-      - [ ] Moves
-      - [ ] Victory/Defeat/Disconnection
-    - [ ] Connect the Frontend to the Backend
-      - [ ] Develop a shared JSON code system, codes for each thing happening
-      - [ ] Get connection working through websockets
-    - [ ] Buy a website name
-    - [ ] Deploy to Heroku
+      - [X] Moves
+      - [X] Victory/Defeat/Disconnection
+      - [X] Continuation afterwards
+    - [X] Testing
+    - [X] Connect the Frontend to the Backend
+      - [X] Develop a shared JSON code system, codes for each thing happening
+      - [X] Get connection working through websockets
+    - [X] Buy a website name
+    - [X] Deploy to Heroku
+    - [ ] Fix SSL Error by waiting?!?
 ** Reference Materials
 * Project Organization
 This is a one-man-project, so not much time was spent on either Managerial Process or Project Organization.
